[gd_scene load_steps=2 format=3 uid="uid://b3rhm7u2bjbf8"]

[ext_resource type="Script" path="res://Main.gd" id="1_fdyfu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdyfu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 18

[node name="Label_Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 29
text = "Jazz Scale Picker"
horizontal_alignment = 1

[node name="Button_Randomize" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Pick Scale"

[node name="Label_ScaleName" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label_Chords" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="Label_Usage" type="Label" parent="VBoxContainer"]
layout_mode = 2
